@@ -1,4 +1,4 @@
-* BLSB * M & Fish * Version 1.0.0
+* BLSB * M & Fish * Version 3.0.a3-dev
 ==============================================================================
 Important information you should know: (READ THIS!)
 ==============================================================================
